feature: basic jwt implement
