# src/router.ts
@@ -4,8 +4,10 @@ import swaggerUi from "swagger-ui-express";
 import DigimonController from "./controller/digimon";
 import AuthController from "./controller/login";
 import PokemonController from "./controller/pokemon";
-import paginateRequest from "./requestes/paginateRequest";
-import searchRequest from "./requestes/searchRequest";
+import PaginateRequest from "./requestes/paginate-request";
+import SearchRequest from "./requestes/search-request";
+import AuthMiddleware from "./middleware/auth-middleware";
+import LoginRequest from "./requestes/login-request";
 
 const router = Router();
 
@@ -13,30 +15,33 @@ const swaggerDocument = require("./swagger.json");
 
 const pokemonController = new PokemonController();
 const digimonController = new DigimonController();
-const PaginateRequest = new paginateRequest();
-const SearchRequest = new searchRequest();
+const paginateRequest = new PaginateRequest();
+const searchRequest = new SearchRequest();
 const authController = new AuthController();
+const authMiddleware = new AuthMiddleware();
+const loginRequest = new LoginRequest();
 
 router.use("/v1/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-router.use("/v1/login", authController.login);
+router.use("/v1/login", loginRequest.validateRequest, authController.login);
 router.get(
     "/v1/pokemons",
-    PaginateRequest.validateRequest,
+    authMiddleware.verifyToken,
+    paginateRequest.validateRequest,
     pokemonController.index
 );
 router.get(
     "/v1/pokemon/:name",
-    SearchRequest.validateRequest,
+    searchRequest.validateRequest,
     pokemonController.show
 );
 router.get(
     "/v1/digimons",
-    PaginateRequest.validateRequest,
+    paginateRequest.validateRequest,
     digimonController.index
 );
 router.get(
     "/v1/digimon/:name",
-    SearchRequest.validateRequest,
+    searchRequest.validateRequest,
     digimonController.show
 );
 
